--- a/main.css
+++ b/main.css
@@ -5,13 +5,17 @@
 .section{
     margin: 0 auto;
     background-color: cornflowerblue;
-    width: 1200px;
+    width: 1024px;
     border-radius: 5px;
     margin-top: 30px;
 }
 
 .container {
-    margin-bottom: 5px;
+    margin-bottom: 15px;
     display: block;
     text-align: center;
+}
+
+#answers {
+    margin-top: 30px;
 }
